# tensorflow_ros_cpp

./: .rosinstall_ci  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  upgrade_pip.sh
.travis/: rosinstall_ci_new_abi  rosinstall_ci_old_abi  upgrade_pip.sh
cmake/: detect_tf_bazel.cmake  detect_tf_catkin.cmake  detect_tf_pip.cmake  tensorflow-extras.cmake.in
