<?xml version="1.0"?>
<package format="2">
  <name>tensorflow_ros</name>
  <version>1.2.0</version>
  <description>Catkin-friendly C++ bindings for the tensorflow package (utilizing the pip-installed tensorflow, which I don't know if it is an officially supported way, but it works).</description>

  <maintainer email="martin.pecka@cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python</build_depend>
  <build_export_depend>python</build_export_depend>

  <build_depend>python-pip</build_depend>

  <depend>python-tensorflow-pip</depend>
</package>
