<?xml version="1.0"?>
<package format="2">
  <name>tensorflow_ros</name>
  <version>2.1.0</version>
  <description>Catkin-friendly C++ bindings for the tensorflow package.</description>

  <maintainer email="martin.pecka@cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python</build_depend>
  <build_export_depend>python</build_export_depend>

  <build_depend>python-pip</build_depend> <!-- optional -->

  <depend>python-tensorflow-pip</depend> <!-- optional -->
  <depend>tensorflow_catkin</depend> <!-- optional -->
</package>
